added class crud functions

--- a/src/main/resources/templates/student.html
+++ b/src/main/resources/templates/student.html
@@ -34,7 +34,7 @@
 					</table>
 				</div>
 				<div id="container-content-form">
-					<form action=""# th:action="@{/students}" th:object="${model}" method="post">
+					<form action=""# th:action="@{/student}" th:object="${model}" method="post">
 						<input id="field-id" type="hidden" th:field="*{id}"/>
 						
 						<label>First Name:</label>
