added attendance crud functions

--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -4,8 +4,8 @@
 
 <div th:fragment="sidebar">
 	<ul>
-		<li>Attendance</li>
-		<li>Class</li>
-		<li>Student</li>
+		<li><a href="/attendance">Attendance</a></li>
+		<li><a href="/class">Class</a></li>
+		<li><a href="/student">Student</a></li>
 	</ul>
 </div>
