--- a/src/main/resources/templates/attendance.html
+++ b/src/main/resources/templates/attendance.html
@@ -2,9 +2,8 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head>
-	<title>Classes</title>
+	<title>Attendance</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<script src="/js/class.js"></script>
 </head>
 
 <body>
@@ -13,6 +12,7 @@
 		<div id="container-body">
 			<div id="container-sidebar" th:replace="/layout :: sidebar"></div>
 			<div id="container-content">
+				<h3>Please select a class:</h3>
 				<div th:each="class: ${list}">
 					<button th:onclick="viewClass([[${class.id}]])">
 						<h3 th:text="${class.name}"></h3>
