--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -4,7 +4,7 @@
 
 <div th:fragment="sidebar">
 	<ul>
-		<li><a href="/attendance">Attendance</a></li>
+		<li><a href="/">Attendance</a></li>
 		<li><a href="/class">Class</a></li>
 		<li><a href="/student">Student</a></li>
 	</ul>
