--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -1,8 +1,8 @@
-<div th:fragment="header">
-	<h1>Attendance Management System</h1>
+<div id="container-header" th:fragment="header">
+	<h1>Attendance System</h1>
 </div>
 
-<div th:fragment="sidebar">
+<div id="container-sidebar" th:fragment="sidebar">
 	<ul>
 		<li><a href="/">Attendance</a></li>
 		<li><a href="/class">Class</a></li>
