--- a/src/main/resources/templates/student.html
+++ b/src/main/resources/templates/student.html
@@ -4,6 +4,7 @@
 <head>
 	<title>Students</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+	<link rel="stylesheet" href="/css/main.css" />
 	<script src="/js/student.js"></script>
 </head>
 
@@ -13,44 +14,46 @@
 		<div id="container-body">
 			<div id="container-sidebar" th:replace="/layout :: sidebar"></div>
 			<div id="container-content">
-				<h1>Students</h1>
-				<div id="container-content-table">
-					<table>
-						<tr>
-							<th>First Name</th>
-							<th>Last Name</th>
-							<th>Address</th>
-							<th>Action</th>
-						</tr>
-						<tr th:each="student: ${studentList}">
-							<td th:text="${student.firstName}"></td>
-							<td th:text="${student.lastName}"></td>
-							<td th:text="${student.address}"></td>
-							<td>
-								<button th:onclick="edit([[${student}]])">Edit</button>
-								<button th:onclick="deleteById([[${student.id}]])">Delete</button>
-							</td>
-						</tr>
-					</table>
-				</div>
-				<div id="container-content-form">
-					<form action=""# th:action="@{/student}" th:object="${model}" method="post">
-						<input id="field-id" type="hidden" th:field="*{id}"/>
-						
-						<label>First Name:</label>
-						<input id="field-firstname" type="text" th:field="*{firstName}"/>
-						<br/>
-						
-						<label>Last Name:</label>
-						<input id="field-lastname" type="text" th:field="*{lastName}"/>
-						<br/>
-						
-						<label>Address:</label>
-						<input id="field-address" type="text" th:field="*{address}"/>
-						<br/><br/>
-						
-						<input type="submit" value="Save"/>
-					</form>
+				<h2>Students</h2>
+				<div id="container-content-student">
+					<div id="container-content-table">
+						<table>
+							<tr>
+								<th width="100">First Name</th>
+								<th width="100">Last Name</th>
+								<th width="200">Address</th>
+								<th>Action</th>
+							</tr>
+							<tr th:each="student: ${studentList}">
+								<td th:text="${student.firstName}"></td>
+								<td th:text="${student.lastName}"></td>
+								<td th:text="${student.address}"></td>
+								<td>
+									<button th:onclick="edit([[${student}]])" style="width: 60px;">Edit</button>
+									<button th:onclick="deleteById([[${student.id}]])" style="width: 60px;">Delete</button>
+								</td>
+							</tr>
+						</table>
+					</div>
+					<div id="container-content-form">
+						<form action=""# th:action="@{/student}" th:object="${model}" method="post">
+							<input id="field-id" type="hidden" th:field="*{id}"/>
+							
+							<label>First Name:</label>
+							<input id="field-firstname" type="text" th:field="*{firstName}"/>
+							<br/>
+							
+							<label>Last Name:</label>
+							<input id="field-lastname" type="text" th:field="*{lastName}"/>
+							<br/>
+							
+							<label>Address:</label>
+							<input id="field-address" type="text" th:field="*{address}"/>
+							<br/>
+							
+							<input type="submit" value="Save"/>
+						</form>
+					</div>
 				</div>
 			</div>
 		</div>
