--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -8,4 +8,7 @@
 		<li><a href="/class">Class</a></li>
 		<li><a href="/student">Student</a></li>
 	</ul>
+	<form th:action="@{/logout}" method="post" style="padding-top: 50vh; padding-left: 15px;">
+		<a href="logout">Logout</a>
+	</form>
 </div>
